# odins_spear

./: .gitignore  .python-version  LICENSE  README.md  SUMMARY.md  create-api-object.md  development.md  pyproject.toml  readme.md.md  requirements.txt  setup.py  support.md
.github/: FUNDING.yml
.github/workflows/: formatter.yml  python-package.yml  python-publish.yml  stale.yml
contact/: README.md  feedback.md  general-feedback.md
custom-features/: find-alias.md
data/odin json profiles/: auto_attendant.json  group.json  hunt_group.json  user.json
docs/: README.md  SUMMARY.md  bugs-and-issues.md  contact.md  development.md  testing.md
docs/docs/: README.md
docs/features/: reporter.md
docs/getting-started/: README.md  create-api-object.md  downloading-library-beta.md  getting-the-essentials-python-+-ide.md  rate-limiting-api-calls.md  setting-environment-variable.md
docs/library-design/: README.md  api-object.md  requester-object.md  scripter-object.md
docs/methods/: delete.md  get.md  post.md  schedules.md
docs/powered-by-odins-spear/: README.md  bulk-build-group-admins.md
docs/troubleshooting-and-faq/: README.md  common-issues.md  graphviz-troubleshooting.md
getting-started/: README.md  downloading-library.md  installing-requirements.md
methods/: README.md  put.md
odin_api/: __init__.py  api.py  broadworks_entities.py  exceptions.py  logger.py  reporter.py  requester.py  scripter.py  scripts.py  store.py
odin_api/api_methods/: delete.py  get.py  post.py  put.py
odins_spear/: __init__.py  api.py  exceptions.py  logger.py  reporter.py  requester.py  scripter.py
tests/: __inti__.py  method_calls.py  on_api_instantiation.py  test_api_on_instantiation.py
welcome/: contact.md  feedback.md  library-design.md
(+406 files in other folders)
