[project]
name = "odins-spear"
version = "0.1.0"
description = "Python package for Odin's API to build and manage Broadworks installations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
