[project]
name = "odins-spear"
version = "2.0.0"
description = "Python package for Odin's API to build and manage Broadworks installations."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "MIT" }
authors = [
    { name = "Jordan Prescott", email = "jordan@minimalmind.io" }
]
classifiers=[
    # Development Status
    "Development Status :: 4 - Beta",
    # Target Audience
    "Intended Audience :: Developers",
    # License
    "License :: OSI Approved :: MIT License",
    # Programming Languages
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Operating Systems
    "Operating System :: OS Independent",
    
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["broadworks", "odin", "api", "telephony", "voip"]

dependencies = [
    "graphviz>=0.20.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
